--- a/amigurumis.html
+++ b/amigurumis.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 	<title> AMIGURUMIS </title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://github.com/Jajajanonono/amigurumis.github.io/blob/5b6be659e8ae86427fc19b012914194c2f5307eb/styles.css">
 </head>
 <body bgcolor="#BEF4FD">
 
