--- a/amigurumis.html
+++ b/amigurumis.html
@@ -18,7 +18,7 @@
 Este producto surgió a partir de elaborar un llavero personal tejido a mano, el público reconoció el futuro que podria tener nuestro producto, empezó a haber demanda sobre estos llaveros, con lo que nuestra empresa decidió empezar a fabricarlos para su venta.
 </div>
 <div id="productos">
-		<a href="E:\jajajajanononono\gato1.html"><img src="https://i.ibb.co/2cbKk61/gato1.jpg" width="200" height="200" alt="gato 1"></a>
+		<a href="https://github.com/Jajajanonono/amigurumis.github.io/blob/2661c0a97c8cd195b4983ec314138171ceefb062/gato1.html"><img src="https://i.ibb.co/2cbKk61/gato1.jpg" width="200" height="200" alt="gato 1"></a>
 		<a href="E:\jajajajanononono\gato2.html"><img src="https://i.ibb.co/mvYZ5dR/6t8Kk.jpg" width="200" height="200" alt="gato 2"></a>
 		<a href="E:\jajajajanononono\gato3.html"><img src="https://i.ibb.co/FndTzJQ/jUNfBga.jpg" width="200" height="200" alt="gato 3"></a>
 		<a href="E:\jajajajanononono\gato4.html"><img src="https://i.ibb.co/6PBMQ5c/HVf0CIg.jpg" width="200" height="200" alt="gato 4"></a>
