--- a/amigurumis.html
+++ b/amigurumis.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 	<title> AMIGURUMIS </title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://github.com/Jajajanonono/amigurumis.github.io/blob/b938ac3b8b8bd0640f30f8242e0170ebecccfb12/styles.css">
 </head>
 <body bgcolor="#BEF4FD">
 
