--- a/amigurumis.html
+++ b/amigurumis.html
@@ -18,10 +18,10 @@
 Este producto surgió a partir de elaborar un llavero personal tejido a mano, el público reconoció el futuro que podria tener nuestro producto, empezó a haber demanda sobre estos llaveros, con lo que nuestra empresa decidió empezar a fabricarlos para su venta.
 </div>
 <div id="productos">
-		<a href="https://github.com/Jajajanonono/amigurumis.github.io/blob/e41514d0e3a0b0eeead2aabeef9dd733c8a8936c/gato1.html"><img src="https://i.ibb.co/2cbKk61/gato1.jpg" width="200" height="200" alt="gato 1"></a>
-		<a href="E:\jajajajanononono\gato2.html"><img src="https://i.ibb.co/mvYZ5dR/6t8Kk.jpg" width="200" height="200" alt="gato 2"></a>
-		<a href="E:\jajajajanononono\gato3.html"><img src="https://i.ibb.co/FndTzJQ/jUNfBga.jpg" width="200" height="200" alt="gato 3"></a>
-		<a href="E:\jajajajanononono\gato4.html"><img src="https://i.ibb.co/6PBMQ5c/HVf0CIg.jpg" width="200" height="200" alt="gato 4"></a>
+		<a href="https://jajajanonono.github.io/amigurumis.github.io/gato1.html"><img src="https://i.ibb.co/2cbKk61/gato1.jpg" width="200" height="200" alt="gato 1"></a>
+		<a href="https://jajajanonono.github.io/amigurumis.github.io/gato1.html"><img src="https://i.ibb.co/mvYZ5dR/6t8Kk.jpg" width="200" height="200" alt="gato 2"></a>
+		<a href="https://jajajanonono.github.io/amigurumis.github.io/gato1.html"><img src="https://i.ibb.co/FndTzJQ/jUNfBga.jpg" width="200" height="200" alt="gato 3"></a>
+		<a href="https://jajajanonono.github.io/amigurumis.github.io/gato1.html"><img src="https://i.ibb.co/6PBMQ5c/HVf0CIg.jpg" width="200" height="200" alt="gato 4"></a>
 </div>
 </body>
 </html>
