--- a/gato4.html
+++ b/gato4.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>producto 4</title>
-    <link rel="stylesheet" href="E:\jajajajanononono\producto.css">
+    <link rel="stylesheet" href="https://github.com/Jajajanonono/amigurumis.github.io/blob/87222a500c02b1b2f6aa1cd6a76f11ae0c4039ff/producto.css">
 </head>
 <body bgcolor="#BEF4FD">
     <img src="https://i.ibb.co/6PBMQ5c/HVf0CIg.jpg" alt="gato1" width="600" height="600">
