--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=URL_DEL_ARCHIVO_DESTINO">
+    <meta http-equiv="refresh" content="amigurumis.html">
     <title>Redireccionando...</title>
 </head>
 <body>
-    <p>Si no eres redirigido automáticamente, <a href="URL_DEL_ARCHIVO_DESTINO">haz clic aquí</a>.</p>
+    <p>Si no eres redirigido automáticamente, <a href="amigurumis.html">haz clic aquí</a>.</p>
 </body>
 </html>
