--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
     <meta http-equiv="refresh" content="amigurumis.html">
     <title>Redireccionando...</title>
