--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="amigurumis.html">
+    <meta http-equiv="refresh" content="https://jajajanonono.github.io/amigurumis.github.io/amigurumis.html">
     <title>Redireccionando...</title>
 </head>
 <body>
-    <p>Si no eres redirigido automáticamente, <a href="amigurumis.html">haz clic aquí</a>.</p>
+    <p>Si no eres redirigido automáticamente, <a href="https://jajajanonono.github.io/amigurumis.github.io/amigurumis.html">haz clic aquí</a>.</p>
 </body>
 </html>
