--- a/gato2.html
+++ b/gato2.html
@@ -5,10 +5,17 @@
 </head>
 <body bgcolor="#BEF4FD" background="recursos\FONDO.png">
 
-<div id="menu">
+<div id="titulo">
 		<h1>CREACIONES DE CLAUDIA</h1>		
 </div>
-
+<div id="menu">
+	<table align="center">
+		<tr>
+			<td><a href="amigurumis.html">INICIO</a></td>
+			<td><a href="productos.html">PRODUCTOS</a></td>
+		</tr>
+	</table>
+</div>
     <img src="https://i.ibb.co/mvYZ5dR/6t8Kk.jpg" alt="gato1">
 <div id="info">
         <div id="nombre">
