--- a/gato1.html
+++ b/gato1.html
@@ -16,6 +16,7 @@
 		</tr>
 	</table>
 </div>
+<hr color="#004AAD" size=3>
     <img src="https://i.ibb.co/2cbKk61/gato1.jpg" alt="gato1">
 <div id="info">
     <div id="nombre">
