--- a/gato2.html
+++ b/gato2.html
@@ -16,6 +16,7 @@
 		</tr>
 	</table>
 </div>
+<hr color="#004AAD" size=3>
     <img src="https://i.ibb.co/mvYZ5dR/6t8Kk.jpg" alt="gato1">
 <div id="info">
         <div id="nombre">
