--- a/gato3.html
+++ b/gato3.html
@@ -16,6 +16,7 @@
 		</tr>
 	</table>
 </div>
+<hr color="#004AAD" size=3>
     <img src="https://i.ibb.co/FndTzJQ/jUNfBga.jpg" alt="gato1">
 
     <div id="info">
