--- a/gato4.html
+++ b/gato4.html
@@ -16,6 +16,7 @@
 		</tr>
 	</table>
 </div>
+<hr color="#004AAD" size=3>
     <img src="https://i.ibb.co/6PBMQ5c/HVf0CIg.jpg" alt="gato1">
 
     <div id="info">
