--- a/amigurumis.html
+++ b/amigurumis.html
@@ -25,6 +25,8 @@
 <div id="antecedentes">
 Este producto surgió a partir de elaborar un llavero personal tejido a mano, el público reconoció el futuro que podria tener nuestro producto, empezó a haber demanda sobre estos llaveros, con lo que nuestra empresa decidió empezar a fabricarlos para su venta.
 </div>
-
+<div id="gif">
+	<img src="recursos/ASDF.gif" align=center alt="gif">
+</div>
 </body>
 </html>
