--- a/amigurumis.html
+++ b/amigurumis.html
@@ -26,7 +26,7 @@
 Este producto surgió a partir de elaborar un llavero personal tejido a mano, el público reconoció el futuro que podria tener nuestro producto, empezó a haber demanda sobre estos llaveros, con lo que nuestra empresa decidió empezar a fabricarlos para su venta.
 </div>
 <div id="gif">
-	<img src="recursos/ASDF.gif" align=center alt="gif">
+	<img src="recursos/ASDF.gif" align=center alt="gif" autoplay>
 </div>
 </body>
 </html>
