--- a/productos.html
+++ b/productos.html
@@ -22,11 +22,15 @@
 <hr color="#004AAD" size=3>
 <h2>PRODUCTOS</h2>
 <div id="productos">
-		<a href="gato1.html"><img src="https://i.ibb.co/2cbKk61/gato1.jpg" width="200" height="200" alt="gato 1"></a>
-		<a href="gato2.html"><img src="https://i.ibb.co/mvYZ5dR/6t8Kk.jpg" width="200" height="200" alt="gato 2"></a>
-		<a href="gato3.html"><img src="https://i.ibb.co/FndTzJQ/jUNfBga.jpg" width="200" height="200" alt="gato 3"></a>
-		<a href="gato4.html"><img src="https://i.ibb.co/6PBMQ5c/HVf0CIg.jpg" width="200" height="200" alt="gato 4"></a>
+		<a href="producto1.html"><img src="recursos\producto 1.jpeg" alt="pato con gorro"></a>
 
+		<a href="producto2.html"><img src="recursos\producto 2.jpeg" alt="winnie pooh"></a>
+
+		<a href="producto3.html"><img src="recursos\producto 3.jpeg" alt="rosa"></a>
+		
+		<a href="producto4.html"><img src="recursos\producto 4.jpeg" alt="san judas"></a>
+
+		<a href="producto5.html"><img src="recursos\producto 5.jpeg" alt="pollito"></a>
 </div>
 
 </body>
