--- a/amigurumis.html
+++ b/amigurumis.html
@@ -30,7 +30,7 @@
 	<img src="recursos\paso2.jpeg" alt="paso 2">
 	<img src="recursos\final.jpeg" alt="paso 3">
 </div>
-<h2>Antecedentes</h2>
+<h2>Como surgió</h2>
 <div id="antecedentes">
 Este producto surgió a partir de elaborar un llavero personal tejido a mano, el público reconoció el futuro que podria tener nuestro producto, empezó a haber demanda sobre estos llaveros, con lo que nuestra empresa decidió empezar a fabricarlos para su venta.
 </div>
