--- a/producto1.html
+++ b/producto1.html
@@ -6,7 +6,9 @@
 <body bgcolor="#BEF4FD" background="recursos\FONDO.png">
 
 <div id="titulo">
-		<h1>CREACIONES DE CLAUDIA</h1>		
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=LEFT alt="logo">
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=RIGHT alt="logo">
+				<h1>CREACIONES DE CLAUDIA</h1>		
 </div>
 <div id="menu">
 	<table align="center">
@@ -17,13 +19,15 @@
 	</table>
 </div>
 <hr color="#004AAD" size=3>
+<div id="producto">
     <img src="recursos\producto 1.jpeg" alt="gato1">
+</div>
 <div id="info">
     <div id="nombre">
         <p>PATO CON GORRO</p>
     </div>
     <div id="precio">
-        <P>$50 PESOS</P>
+        <P>$90 PESOS</P>
     </div>
     <div id="detalles">
         <P>PATO BLANCO CON UN GORRO ROJO TEJIDO A MANO</P>
