--- a/producto5.html
+++ b/producto5.html
@@ -5,8 +5,10 @@
 </head>
 <body bgcolor="#BEF4FD" background="recursos\FONDO.png">
 
-<div id="titulo">
-		<h1>CREACIONES DE CLAUDIA</h1>		
+ <div id="titulo">
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=LEFT alt="logo">
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=RIGHT alt="logo">
+				<h1>CREACIONES DE CLAUDIA</h1>		
 </div>
 <div id="menu">
 	<table align="center">
@@ -17,14 +19,16 @@
 	</table>
 </div>
 <hr color="#004AAD" size=3>
-    <img src="recursos\producto 5.jpeg" alt="pollito">
+<div id="producto">
+    <img src="recursos\producto 5.jpeg" alt="Pato en columpio">
+</div>
 
     <div id="info">
         <div id="nombre">
-            <p>POLLITO</p>
+            <p>PATITO EN COLUMPIO</p>
         </div>
         <div id="precio">
-            <P>$45 PESOS</P>
+            <P>$55 PESOS</P>
         </div>
         <div id="detalles">
             <P>POLLITO EN UN COLUMPIO TEJIDO A MANO</P>
