--- a/producto2.html
+++ b/producto2.html
@@ -6,7 +6,9 @@
 <body bgcolor="#BEF4FD" background="recursos\FONDO.png">
 
 <div id="titulo">
-		<h1>CREACIONES DE CLAUDIA</h1>		
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=LEFT alt="logo">
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=RIGHT alt="logo">
+				<h1>CREACIONES DE CLAUDIA</h1>		
 </div>
 <div id="menu">
 	<table align="center">
@@ -17,13 +19,15 @@
 	</table>
 </div>
 <hr color="#004AAD" size=3>
-    <img src="recursos\producto 2.jpeg" alt="winnie pooh">
+<div id="producto">
+    <img src="recursos\producto 2.jpeg" alt="Winnie pooh">
+</div>
 <div id="info">
         <div id="nombre">
             <p>WINNIE POOH</p>
         </div>
         <div id="precio">
-            <P>$55 PESOS</P>
+            <P>$80 PESOS</P>
         </div>
         <div id="detalles">
             <P>WINNIE POOH TEJIDO A MANO</P>
