--- a/producto3.html
+++ b/producto3.html
@@ -6,7 +6,9 @@
 <body bgcolor="#BEF4FD" background="recursos\FONDO.png">
 
 <div id="titulo">
-		<h1>CREACIONES DE CLAUDIA</h1>		
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=LEFT alt="logo">
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=RIGHT alt="logo">
+				<h1>CREACIONES DE CLAUDIA</h1>		
 </div>
 <div id="menu">
 	<table align="center">
@@ -17,14 +19,17 @@
 	</table>
 </div>
 <hr color="#004AAD" size=3>
-    <img src="recursos\producto 3.jpeg" alt="rosa">
-
+<div id="producto">
+    <div id="producto">
+        <img src="recursos\producto 3.jpeg" alt="producto 3">
+    </div>
+</div>
     <div id="info">
         <div id="nombre">
-            <p>ROSA</p>
+            <p>TULIPAN</p>
         </div>
         <div id="precio">
-            <P>$60 PESOS</P>
+            <P>$55 PESOS</P>
         </div>
         <div id="detalles">
             <P>ROSA MINIATURA, TEJIDA A MANO</P>
