--- a/producto4.html
+++ b/producto4.html
@@ -6,8 +6,10 @@
 <body bgcolor="#BEF4FD" background="recursos\FONDO.png">
 
 <div id="titulo">
-		<h1>CREACIONES DE CLAUDIA</h1>		
-</div>
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=LEFT alt="logo">
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=RIGHT alt="logo">
+				<h1>CREACIONES DE CLAUDIA</h1>		
+</div>>
 <div id="menu">
 	<table align="center">
 		<tr>
@@ -17,14 +19,16 @@
 	</table>
 </div>
 <hr color="#004AAD" size=3>
-    <img src="recursos\producto 4.jpeg" alt="san judas">
+<div id="producto">
+    <img src="recursos\producto 4.jpeg" alt="San Judas">
+</div>
 
     <div id="info">
         <div id="nombre">
             <p>SAN JUDAS</p>
         </div>
         <div id="precio">
-            <P>$45 PESOS</P>
+            <P>$60 PESOS</P>
         </div>
         <div id="detalles">
             <P>SAN JUDAS EN MINIATURA TEJIDO A MANO</P>
