--- a/producto1.html
+++ b/producto1.html
@@ -6,8 +6,8 @@
 <body bgcolor="#BEF4FD" background="recursos\FONDO.png">
 
 <div id="titulo">
-		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=LEFT alt="logo">
-		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=RIGHT alt="logo">
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png"align=LEFT alt="logo">
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png"align=RIGHT alt="logo">
 				<h1>CREACIONES DE CLAUDIA</h1>		
 </div>
 <div id="menu">
@@ -24,13 +24,13 @@
 </div>
 <div id="info">
     <div id="nombre">
-        <p>PATO CON GORRO</p>
+        <p>PATITA CON GORRO</p>
     </div>
     <div id="precio">
         <P>$90 PESOS</P>
     </div>
     <div id="detalles">
-        <P>PATO BLANCO CON UN GORRO ROJO TEJIDO A MANO</P>
+        <P>PATITA BLANCA CON UN GORRO TEJIDO A MANO</P>
     </div>
 </div>
 </body>
