--- a/producto2.html
+++ b/producto2.html
@@ -6,8 +6,8 @@
 <body bgcolor="#BEF4FD" background="recursos\FONDO.png">
 
 <div id="titulo">
-		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=LEFT alt="logo">
-		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=RIGHT alt="logo">
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png"align=LEFT alt="logo">
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png"align=RIGHT alt="logo">
 				<h1>CREACIONES DE CLAUDIA</h1>		
 </div>
 <div id="menu">
