--- a/producto5.html
+++ b/producto5.html
@@ -6,8 +6,8 @@
 <body bgcolor="#BEF4FD" background="recursos\FONDO.png">
 
  <div id="titulo">
-		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=LEFT alt="logo">
-		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png" width="150" height="150" align=RIGHT alt="logo">
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png"align=LEFT alt="logo">
+		<img src="https://i.ibb.co/fvgHDWf/LOGO-AMIGURUMIS.png"align=RIGHT alt="logo">
 				<h1>CREACIONES DE CLAUDIA</h1>		
 </div>
 <div id="menu">
@@ -31,7 +31,7 @@
             <P>$55 PESOS</P>
         </div>
         <div id="detalles">
-            <P>POLLITO EN UN COLUMPIO TEJIDO A MANO</P>
+            <P>PATITO EN UN COLUMPIO TEJIDO A MANO</P>
         </div>
     </div>
 
