--- a/productos.html
+++ b/productos.html
@@ -22,15 +22,22 @@
 <hr color="#004AAD" size=3>
 <h2>PRODUCTOS</h2>
 <div id="productos">
-		<a href="producto1.html"><img src="recursos\producto 1.jpeg" alt="pato con gorro"></a>
+	
+		<a href="producto1.html"><p>PATITA CON GORRO</p></a>
+		<a href="producto1.html"><img src="recursos\producto 1.jpeg" alt="PATITA CON GORRO"></a>
 
-		<a href="producto2.html"><img src="recursos\producto 2.jpeg" alt="winnie pooh"></a>
+		<a href="producto2.html"><p>WINNIE POOH</p></a>
+		<a href="producto2.html"><img src="recursos\producto 2.jpeg" alt="WINNIE POOH"></a>
 
-		<a href="producto3.html"><img src="recursos\producto 3.jpeg" alt="rosa"></a>
+		<a href="producto3.html"><p>TULIPAN</p></a>
+		<a href="producto3.html"><img src="recursos\producto 3.jpeg" alt="TULIPAN"></a>
+
+		<a href="producto4.html"><p>SAN JUDAS</p></a>
+		<a href="producto4.html"><img src="recursos\producto 4.jpeg" alt="SAN JUDAS"></a>
+
+		<a href="producto5.html"><p>POLLITO EN COLUMPIO</p></a>
+		<a href="producto5.html"><img src="recursos\producto 5.jpeg" alt="POLLITO EN COLUMPIO"></a>
 		
-		<a href="producto4.html"><img src="recursos\producto 4.jpeg" alt="san judas"></a>
-
-		<a href="producto5.html"><img src="recursos\producto 5.jpeg" alt="pollito"></a>
 </div>
 
 </body>
