--- a/productos.html
+++ b/productos.html
@@ -35,7 +35,7 @@
 		<a href="producto4.html"><p>SAN JUDAS</p></a>
 		<a href="producto4.html"><img src="recursos\producto 4.jpeg" alt="SAN JUDAS"></a>
 
-		<a href="producto5.html"><p>POLLITO EN COLUMPIO</p></a>
+		<a href="producto5.html"><p>PATITO EN COLUMPIO</p></a>
 		<a href="producto5.html"><img src="recursos\producto 5.jpeg" alt="POLLITO EN COLUMPIO"></a>
 		
 </div>
