--- a/producto1.html
+++ b/producto1.html
@@ -32,6 +32,9 @@
     <div id="detalles">
         <P>PATITA BLANCA CON UN GORRO TEJIDO A MANO</P>
     </div>
+    <div id="regreso">
+        <a href="productos.html"><P>ATRAS</P></a>
+    </div>
 </div>
 </body>
 </html>
