--- a/producto3.html
+++ b/producto3.html
@@ -34,6 +34,9 @@
         <div id="detalles">
             <P>ROSA MINIATURA, TEJIDA A MANO</P>
         </div>
+        <div id="regreso">
+            <a href="productos.html"><P>ATRAS</P></a>
+        </div>
     </div>
 
 </body>
