--- a/producto2.html
+++ b/producto2.html
@@ -32,6 +32,9 @@
         <div id="detalles">
             <P>WINNIE POOH TEJIDO A MANO</P>
         </div>
+        <div id="regreso">
+            <a href="productos.html"><P>ATRAS</P></a>
+        </div>
 </div>
 
 
