--- a/producto5.html
+++ b/producto5.html
@@ -33,6 +33,9 @@
         <div id="detalles">
             <P>PATITO EN UN COLUMPIO TEJIDO A MANO</P>
         </div>
+        <div id="regreso">
+            <a href="productos.html"><P>ATRAS</P></a>
+        </div>
     </div>
 
 </body>
